[gd_scene load_steps=3 format=3 uid="uid://bta8v0qgvy0ev"]

[ext_resource type="Script" uid="uid://bawaaq8d4xlhw" path="res://game/entities/towers/base_tower.gd" id="1_y72ll"]
[ext_resource type="Texture2D" uid="uid://dw6witrfkjjoo" path="res://assets/images/entities/towers/range.png" id="2_5cqtt"]

[node name="BaseTower" type="Node2D"]
script = ExtResource("1_y72ll")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="AttackTimer" type="Timer" parent="."]

[node name="AttackRangeDisplay" type="Sprite2D" parent="."]
scale = Vector2(1.0063938, 0.9752177)
texture = ExtResource("2_5cqtt")

[node name="AttackRangeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRangeArea"]
scale = Vector2(14.681717, 14.681717)

[node name="DisplayTowerInfoClickbox" type="Area2D" parent="."]
process_mode = 3
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DisplayTowerInfoClickbox"]
process_mode = 3
scale = Vector2(3.0917277, 3.0917277)

[node name="ProjectileSound" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
max_polyphony = 10
bus = &"SFX"

[connection signal="input_event" from="DisplayTowerInfoClickbox" to="." method="_on_display_tower_info_clickbox_input_event"]
